# GT_SUPER_KONTROLER_2026_V001

./: 00_OKU_BENI.txt  00_PYTHON3_KUR.bat  DEGISIKLIK_NOTU_XY_FIX.txt  DEGISIKLIK_NOTU_XY_GP19_FIX.txt  GT_SUPER_KONTROLER_2026_V001.py  tusb_config.h
.github/workflows/: build_uf2.yml
GT_SUPER_KONTROLER_2026_V001D_XY_FIX_GITHUB (1)/: 00_OKU_BENI.txt  CMakeLists.txt  DEGISIKLIK_NOTU_XY_FIX.txt  GT_SUPER_KONTROLER_2026_V001.bat  GT_SUPER_KONTROLER_2026_V001.py
GT_SUPER_KONTROLER_2026_V001D_XY_FIX_GITHUB (1)/include/: gt_super_protocol.h
GT_SUPER_KONTROLER_2026_V001D_XY_FIX_GITHUB (1)/src/: controller_main.c  mouse_main.c  usb_descriptors.c
GT_SUPER_KONTROLER_2026_V001F_STABLE_GITHUB/: 00_OKU_BENI.txt  CMakeLists.txt  GT_SUPER_KONTROLER_2026_V001.bat  GT_SUPER_KONTROLER_2026_V001.py  V001F_DEGISIKLIKLER.txt
GT_SUPER_KONTROLER_2026_V001F_STABLE_GITHUB/src/: controller_main.c  mouse_main.c
src/: mouse_main.c
